update references from manuscript

--- a/data/references.bib
+++ b/data/references.bib
@@ -1699,6 +1699,238 @@ abstract = {},
 location = {}, 
 keywords = {Bayesian; Bayesian P value; goodness-of-fit; hierarchical model; model checking; model diagnostics; Model evaluation; posterior checks}}
 
+@Article{Blischak:2016kr,
+author = {Blischak, John D and Davenport, Emily R and Wilson, Greg}, 
+title = {A Quick Introduction to Version Control with Git and GitHub}, 
+journal = {PLoS Computational Biology}, 
+volume = {12}, 
+number = {1}, 
+pages = {e1004668–18}, 
+year = {2016}, 
+abstract = {}, 
+location = {}, 
+keywords = {git; GitHub; open data; open science; version control}}
+
+
+@Article{Simmons:2011iw,
+author = {Simmons, Joseph P and Nelson, Leif D and Simonsohn, Uri}, 
+title = {False-Positive Psychology}, 
+journal = {Psychological Science}, 
+volume = {22}, 
+number = {11}, 
+pages = {1359–1366}, 
+year = {2011}, 
+abstract = {In this article, we accomplish two things. First, we show that despite empirical psychologists’ nominal endorsement of a low rate of false-positive findings (≤.05), flexibility in data collection, analysis, and reporting dramatically increases actual false-positive rates. In many cases, a researcher is more likely to falsely find evidence that an effect exists than to correctly find evidence that it does not. We present computer simulations and a pair of actual experiments that demonstrate how unacceptably easy it is to accumulate (and report) statistically significant evidence for a false hypothesis. Second, we suggest a simple, low-cost, and straightforwardly effective disclosure-based solution to this problem. The solution involves six concrete requirements for authors and four guidelines for reviewers, all of which impose a minimal burden on the publication process.}, 
+location = {}, 
+keywords = {disclosure; methodology; publication; Questionable Research Practices; transparency; undisclosed flexibility; researcher degrees of freedom}}
+
+
+@Article{Seaman:2015gv,
+author = {Seaman, Christopher Scott and Weber, Rene}, 
+title = {Undisclosed Flexibility in Computing and Reporting Structural Equation Models in Communication Science}, 
+journal = {Communication Methods and Measures}, 
+volume = {9}, 
+number = {4}, 
+pages = {208–232}, 
+year = {2015}, 
+abstract = {Communication Methods and Measures, 2015. doi:10.1080/19312458.2015.1096329}, 
+location = {}, 
+keywords = {causal modelling; cherry picking; HARKing; Questionable Research Practices; reproducibility; research flexibilities; researcher degrees of freedom; structural equation modelling}}
+
+
+@Book{Kitzes2018vn,
+author = {Kitzes, J and Turek, D and Deniz, F}, 
+title = {The Practice of Reproducible Research: Case Studies and Lessons from the Data-Intensive Sciences.}, 
+volume = {}, 
+pages = {1-319}, 
+editor = {Kitzes, J and Turek, D and Deniz, F}, 
+publisher = {University of California Press}, 
+address = {Oakland, CA}, 
+year = {2018}, 
+abstract = {}, 
+keywords = {}}
+
+@Article{BenBondLamberty:2018by,
+author = {Ben, Bond-Lamberty and Smith, A Peyton and Bailey, Vanessa}, 
+title = {Running an open experiment: transparency and reproducibility in soil and ecosystem science}, 
+journal = {Environmental Research Letters}, 
+volume = {11}, 
+number = {8}, 
+pages = {1–7}, 
+year = {2018}, 
+abstract = {Environmental Research Letters, 11(2016) 084004. doi:10.1088/1748-9326/11/8/084004}, 
+location = {}, 
+keywords = {git; GitHub; open data; reproducibility; Reproducible Research; transparency}}
+
+
+@Article{Fraser:2018cl,
+author = {Fraser, Hannah and Parker, Tim and Nakagawa, Shinichi and Barnett, Ashley and Fidler, Fiona}, 
+title = {Questionable research practices in ecology and evolution.}, 
+journal = {PLoS One}, 
+volume = {13}, 
+number = {7}, 
+pages = {e0200303}, 
+year = {2018}, 
+abstract = {We surveyed 807 researchers (494 ecologists and 313 evolutionary biologists) about their use of Questionable Research Practices (QRPs), including cherry picking statistically significant results, p hacking, and hypothesising after the results are known (HARKing). We also asked them to estimate the proportion of their colleagues that use each of these QRPs. Several of the QRPs were prevalent within the ecology and evolution research community. Across the two groups, we found 64% of surveyed researchers reported they had at least once failed to report results because they were not statistically significant (cherry picking); 42% had collected more data after inspecting whether results were statistically significant (a form of p hacking) and 51% had reported an unexpected finding as though it had been hypothesised from the start (HARKing). Such practices have been directly implicated in the low rates of reproducible results uncovered by recent large scale replication studies in psychology and other disciplines. The rates of QRPs found in this study are comparable with the rates seen in psychology, indicating that the reproducibility problems discovered in psychology are also likely to be present in ecology and evolution.}, 
+location = {School of BioSciences, University of Melbourne, Parkville, VIC, Australia.}, 
+keywords = {QRP; questionable research practice; reproducibility}}
+
+
+@Article{Fidler:2017he,
+author = {Fidler, Fiona and Chee, Yung En and Wintle, Brendan A and Burgman, Mark A and McCarthy, Michael A and Gordon, Ascelin}, 
+title = {Metaresearch for Evaluating Reproducibility in Ecology and Evolution}, 
+journal = {BioScience}, 
+volume = {}, 
+number = {}, 
+pages = {biw159–8}, 
+year = {2017}, 
+abstract = {}, 
+location = {}, 
+keywords = {metaresearch; open science; publication bias; reproducibility; transparency}}
+
+
+@Article{Srivastava2018,
+author = {Srivastava, Sanjay}, 
+title = {Sound Inference in Complicated Research: A Multi-Strategy Approach}, 
+journal = {}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2018}, 
+abstract = {Researchers are increasingly paying attention to practices that can capitalize on chance. Capitalizing on chance can lead to unreplicable results in the form of false-positive tests, biased estimates, or overfit models. Preregistration of analysis plans, where a researcher anticipates all analysis decisions in advance and makes a plan for each one, has been promoted as one way to make inferences more sound and findings more replicable. Preregistration works by creating decision independence: analytic decisions are the same regardless of the potentially spurious features of the specific dataset being analyzed, instead of being overfit to them. But preregistration can be difficult in practice for some complicated research paradigms, including longitudinal studies, statistical modeling, machine learning, and other large multivariate designs and analyses where key decisions may be difficult to anticipate or make in advance. When simple preregistration is not practical, other strategies that create decision independence can be incorporated into it or used in place of it. This manuscript describes six such strategies: standardization, blind analysis, data partitioning, supporting studies, coordinated analysis, and multiverse analysis. All of them can be used to create adaptive preregistrations, and several can also be used when decisions arise that were not anticipated. Used together, they can form an integrative, multi-strategy approach to drawing sound inferences in a wide range of research.}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Raemaekers2017,
+author = {Raemaekers, S. and van Deursen, A. and Visser, J.}, 
+title = {Semantic versioning and impact of breaking changes in the Maven repository}, 
+journal = {Journal of Systems and Software}, 
+volume = {129}, 
+number = {}, 
+pages = {140–158}, 
+year = {2017}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Wicherts2016,
+author = {Wicherts, JM and Veldkamp, CL and Augusteijn, HE and Bakker, M and van Aert, RC and van Assen, MA}, 
+title = {Degrees of Freedom in Planning, Running, Analyzing, and Reporting Psychological Studies: A Checklist to Avoid p-Hacking.}, 
+journal = {Front Psychol}, 
+volume = {7}, 
+number = {}, 
+pages = {1832}, 
+year = {2016}, 
+abstract = {The designing, collecting, analyzing, and reporting of psychological studies entail many choices that are often arbitrary. The opportunistic use of these so-called researcher degrees of freedom aimed at obtaining statistically significant results is problematic because it enhances the chances of false positive results and may inflate effect size estimates. In this review article, we present an extensive list of 34 degrees of freedom that researchers have in formulating hypotheses, and in designing, running, analyzing, and reporting of psychological research. The list can be used in research methods education, and as a checklist to assess the quality of preregistrations and to determine the potential for bias due to (arbitrary) choices in unregistered studies.}, 
+location = {Methodology and Statistics, Tilburg University Tilburg, Netherlands.}, 
+keywords = {questionable research practice; experimental design; significance testing; p-hacking; bias; significance chasing; research methods education}}
+
+
+@Article{Powers2018,
+author = {Powers, Stephen M. and Hampton, Stephanie E.}, 
+title = {Open science, reproducibility, and transparency in ecology}, 
+journal = {Ecological Applications}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2018}, 
+abstract = {Reproducibility is a key tenet of the scientific process that dictates the reliability and generality of results and methods. The complexities of ecological observations and data present novel challenges in satisfying needs for reproducibility, and also transparency. Ecological systems are dynamic and heterogeneous, interacting with numerous factors that sculpt natural history and that investigators cannot completely control. Observations may be highly dependent on spatial and temporal context, making them very difficult to reproduce, but computational reproducibility still can be achieved. Computational reproducibility often refers to the ability to produce equivalent analytical outcomes from the same data set using the same code and software as the original study. When coded workflows are shared, authors and editors provide transparency for readers and allow other researchers to build directly and efficiently on primary work. These qualities may be especially important in ecological applications that have important or controversial implications for science, management, and policy. Expectations for computational reproducibility and transparency are shifting rapidly in the sciences. In this work we highlight many of the unique challenges for ecology along with practical guidelines for reproducibility and transparency, as ecologists continue to participate in the stewardship of critical environmental information and ensure that research methods demonstrate integrity.}, 
+location = {}, 
+keywords = {reproducibility, transparency, open science, data policy, environmental science, ecoinformatics, ecosystem engineering, replicability, repeatability, data science, collaborative tools, workflows}}
+
+
+@Article{Cruwell2019,
+author = {Crüwell, Sophia and Stefan, Angelika M. and Evans, Nathan J.}, 
+title = {Robust Standards in Cognitive Science}, 
+journal = {Computational Brain & Behavior}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
+@Proceedings{Gould:2019ebg,
+author = {Gould, E., Fraser, H., Rumpff, L., Fidler, F.}, 
+editor = {}, 
+title = {Questionable Research Practices in non-hypothesis testing research: Ecological models for conservation decision-making}, 
+booktitle = {Questionable Research Practices in non-hypothesis testing research: Ecological models for conservation decision-making}, 
+volume = {}, 
+publisher = {}, 
+address = {}, 
+pages = {}, 
+year = {2019}, 
+abstract = {Recent metaresearch studying the prevalence, types, causes and solutions to Questionable Research Practices (QRPs) has almost exclusively focussed on frequentist hypothesis-testing. However, within Conservation Science, modellers routinely conduct non-hypothesis testing research; building models that generate anticipatory predictions to guide policy and decision makers in managing threatened ecosystems and species. We expand the scope of current QRP work by proposing a conceptual framework for defining and understanding the emergence of QRPs within model-centric research. We surveyed the literature to construct ‘roadmaps’ identifying the type and location of plausible QRPs within the model development process. There are many opportunities for undisclosed researcher degrees of freedom in ecological modelling. While there are direct analogues between NHST and non-NHST research, there are domain and context-specific nuances that influence the emergence of QRPs in model-centric research.}, 
+keywords = {metascience; ecology; applied ecology; modeling}}
+
+@Article{Parker2019,
+author = {Parker, T and Fraser, H and Nakagawa, S}, 
+title = {Making conservation science more reliable with preregistration and registered reports.}, 
+journal = {Conserv Biol}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+abstract = {}, 
+location = {Biology Department, Whitman College, 345 Boyer Ave., Walla Walla, WA, 99362, U.S.A. School of BioSciences, University of Melbourne, Grattan Street, Parkville, Victoria, 3010, Australia. Evolution & Ecology Research Centre, School of Biological, Earth and Environmental Sciences, University of New South Wales, Randwick, New South Wales, 2052, Australia.}, 
+keywords = {}}
+
+
+@Article{Gould:2020ebg,
+author = {Gould, E., Fraser, H., Rumpff, L., Fidler, F.}, 
+title = {Questionable Research Practices in Ecological Modelling}, 
+journal = {}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {In prep.}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{MacEachern2019,
+author = {MacEachern, Steven N and Van Zandt, Trisha}, 
+title = {Preregistration of Modeling Exercises May Not Be Useful}, 
+journal = {Comput Brain Behav}, 
+volume = {2}, 
+number = {3-4}, 
+pages = {179–182}, 
+year = {2019}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Pu2019,
+author = {Pu, Xiaoying and Zhu, Licheng and Kay, Matthew and Conrad, Frederick}, 
+title = {Designing for preregistration in practice: Multiple norms and purposes}, 
+journal = {}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+abstract = {The replication crisis—a failure to replicate foundational studies—has sparked a conversation in psychology, HCI, and beyond about scientific reliability. To address the crisis, researchers increasingly adopt preregistration: the practice of documenting research plans before conducting a study. Done properly, preregistration reduces bias from taking exploratory findings as confirmatory. It is crucial to treat preregistration, often an online form/template, as a user-centered design problem to ensure preregistration achieves its …}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Lupia2014,
+author = {Lupia, Arthur and Elman, Colin}, 
+title = {Openness in Political Science: Data Access and Research Transparency}, 
+journal = {PS: Political Science & Politics}, 
+volume = {47}, 
+number = {01}, 
+pages = {19–42}, 
+year = {2014}, 
+abstract = {<jats:p>In 2012, the American Political Science Association (APSA) Council adopted new policies guiding data access and research transparency in political science. The policies appear as a revision to APSA’s<jats:italic>Guide to Professional Ethics in Political Science</jats:italic>. The revisions were the product of an extended and broad consultation with a variety of APSA committees and the association’s membership.</jats:p}, 
+location = {}, 
+keywords = {}}
+
 
 
 
